Add FBRE disclosure

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <p><a href="overflow.html">Transaction-Relay Throughtput Overflow Attacks</a></p>
 <p><a href="minerjamming.html">Replacement Cycling Attacks on Bitcoin Miners Block Templates</a></p>
 <p><a href="sigsoverflow.html">Blocksigs Overflow Attacks Against A Subset of BIP119 Use-Cases</a></p>
+<p><a href="feebumping.html">Fee-Bumping Reserves Exhaustion Attacks Against a LN node</a></p>
